Auth path and controller created
